Intermittent GECKO(10464) | Assertion failure: aContext, at z:/build/build/src/mozglue/dllservices/LoaderObserver.cpp:64
Categories
(Core :: mozglue, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox-esr68 | --- | unaffected |
firefox69 | --- | unaffected |
firefox70 | --- | unaffected |
firefox71 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: bugzilla)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: aiakab [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=268081071&repo=autoland
Full log: https://queue.taskcluster.net/v1/task/R31syY6jQY-fVasUgsLWnw/runs/0/artifacts/public/logs/live_backing.log
[task 2019-09-24T01:26:41.490Z] 01:26:41 INFO - GECKO(10464) | --DOMWINDOW == 6 (00000179F496F800) [pid = 6064] [serial = 5] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:41.490Z] 01:26:41 INFO - GECKO(10464) | --DOMWINDOW == 5 (00000179EDDCB800) [pid = 6064] [serial = 2] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:41.530Z] 01:26:41 INFO - GECKO(10464) | --DOMWINDOW == 4 (00000179F4907020) [pid = 6064] [serial = 1] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:42.897Z] 01:26:42 INFO - GECKO(10464) | --DOMWINDOW == 4 (000001DE26CC5800) [pid = 4964] [serial = 2] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:42.920Z] 01:26:42 INFO - GECKO(10464) | --DOMWINDOW == 3 (000001DE2E90D7A0) [pid = 4964] [serial = 4] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:42.920Z] 01:26:42 INFO - GECKO(10464) | --DOMWINDOW == 2 (000001DE2E90D020) [pid = 4964] [serial = 1] [outer = 0000000000000000] [url = chrome://gfxsanity/content/sanitytest.html]
[task 2019-09-24T01:26:43.102Z] 01:26:43 INFO - GECKO(10464) | --DOMWINDOW == 11 (0000023ECA16A400) [pid = 2884] [serial = 8] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:43.102Z] 01:26:43 INFO - GECKO(10464) | --DOMWINDOW == 10 (0000023ECA167400) [pid = 2884] [serial = 6] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:43.102Z] 01:26:43 INFO - GECKO(10464) | --DOMWINDOW == 9 (0000023EC9390400) [pid = 2884] [serial = 2] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:43.102Z] 01:26:43 INFO - GECKO(10464) | --DOMWINDOW == 8 (0000023EC939E800) [pid = 2884] [serial = 4] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:43.161Z] 01:26:43 INFO - GECKO(10464) | --DOMWINDOW == 7 (0000023ECA1347A0) [pid = 2884] [serial = 7] [outer = 0000000000000000] [url = moz-extension://f422fee4-5aa5-4d64-8d34-36a22e4b30c0/_generated_background_page.html]
[task 2019-09-24T01:26:44.336Z] 01:26:44 INFO - GECKO(10464) | --DOCSHELL 0000020DA9954000 == 0 [pid = 8184] [id = {5dea6712-0a28-4661-bd76-8b91338aa621}] [url = about:blank]
[task 2019-09-24T01:26:44.356Z] 01:26:44 INFO - GECKO(10464) | --DOMWINDOW == 3 (0000014FF54A2800) [pid = 5216] [serial = 2] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:44.356Z] 01:26:44 INFO - GECKO(10464) | --DOMWINDOW == 2 (0000014FF62B8000) [pid = 5216] [serial = 3] [outer = 0000000000000000] [url = http://example.com/browser/tools/profiler/tests/browser/do_work_500ms.html]
[task 2019-09-24T01:26:44.394Z] 01:26:44 INFO - GECKO(10464) | --DOMWINDOW == 1 (0000014FF623C020) [pid = 5216] [serial = 1] [outer = 0000000000000000] [url = http://example.com/browser/tools/profiler/tests/browser/do_work_500ms.html]
[task 2019-09-24T01:26:45.567Z] 01:26:45 INFO - GECKO(10464) | --DOMWINDOW == 3 (00000179F635E400) [pid = 6064] [serial = 7] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:45.567Z] 01:26:45 INFO - GECKO(10464) | --DOMWINDOW == 2 (00000179EDDC1000) [pid = 6064] [serial = 3] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:46.970Z] 01:26:46 INFO - GECKO(10464) | --DOMWINDOW == 1 (000001DE2E96C400) [pid = 4964] [serial = 3] [outer = 0000000000000000] [url = chrome://gfxsanity/content/sanitytest.html]
[task 2019-09-24T01:26:46.970Z] 01:26:46 INFO - GECKO(10464) | --DOMWINDOW == 0 (000001DE2CA7A000) [pid = 4964] [serial = 5] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:47.192Z] 01:26:47 INFO - GECKO(10464) | --DOMWINDOW == 6 (0000023ECA175800) [pid = 2884] [serial = 12] [outer = 0000000000000000] [url = moz-extension://f422fee4-5aa5-4d64-8d34-36a22e4b30c0/_generated_background_page.html]
[task 2019-09-24T01:26:48.434Z] 01:26:48 INFO - GECKO(10464) | --DOMWINDOW == 0 (0000014FF7929400) [pid = 5216] [serial = 4] [outer = 0000000000000000] [url = http://example.com/browser/tools/profiler/tests/browser/do_work_500ms.html]
[task 2019-09-24T01:26:54.282Z] 01:26:54 INFO - GECKO(10464) | --DOMWINDOW == 1 (0000020DB0611020) [pid = 8184] [serial = 1] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:26:58.324Z] 01:26:58 INFO - GECKO(10464) | --DOMWINDOW == 0 (0000020DAF85D400) [pid = 8184] [serial = 2] [outer = 0000000000000000] [url = about:blank]
[task 2019-09-24T01:28:04.394Z] 01:28:04 INFO - TEST-INFO | started process screenshot
[task 2019-09-24T01:28:04.457Z] 01:28:04 INFO - TEST-INFO | screenshot: exit 0
[task 2019-09-24T01:28:04.459Z] 01:28:04 INFO - Buffered messages logged at 01:26:34
[task 2019-09-24T01:28:04.459Z] 01:28:04 INFO - Entering test bound test_profile_feature_preferencereads
Aaron, I believe it's in your new code from bug 1542830 (part 4). Could you please have a look?
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Comment 2•6 years ago
|
||
This assertion could fire if the profiler state changes between beginning and
ending a DLL load. That's less than ideal, so let's just get rid of it.
Comment 4•6 years ago
|
||
bugherder |
Updated•6 years ago
|
Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
Description
•